--- a/todoapp/index.html
+++ b/todoapp/index.html
@@ -3,9 +3,34 @@
   <head>
     <meta charset="utf-8" />
     <title>Todo App</title>
+    <!-- CSSファイルを読み込み -->
+    <link
+      href="https://jsprimer.net/use-case/todoapp/final/final/index.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <h1>Todo App</h1>
+    <!-- class属性をCSSのために設定 -->
+    <div class="todoapp">
+      <!-- id属性をJSのために指定 -->
+      <form id="js-form">
+        <input
+          id="js-form-input"
+          class="new-todo"
+          type="text"
+          placeholder="What need to be done?"
+          autocomplete="off"
+        />
+      </form>
+      <!-- TodoアプリのメインとなるTodoリスト -->
+      <div id="js-todo-list" class="todo-list">
+        <!-- 動的に更新されるTODOリスト -->
+      </div>
+      <footer class="footer">
+        <!-- Todoアイテム数の表示 -->
+        <span id="js-todo-count">Todoアイテム数: 0</span>
+      </footer>
+    </div>
     <script type="module" src="index.js"></script>
   </body>
 </html>
